# riru-build-utils

./: .gitignore  GUIDELINES.md  README.md  main.py  meson.build  rbu.in
build-aux/sisyphus/: riru-build-utils.spec
data/: aliases.db  aliases.yml  meson.build  projects.yml
data/spec-templates/: cli-application.spec  gnome-application.spec  library.spec  service.spec
data/spec-templates/python/: package
data/spec-templates/vala/: cli-application  gnome-application  gnome-application.spec  library  service
docs/: GUIDELINES.md
rbu/: aliases.py  creator.py  ssh_wrapper.py  tester.py  updater.py  utils.py
riru_build_utils/: aliases.py  cloner.py  constants.py  creator.py  initer.py  projects.py  ssh_wrapper.py  tester.py  updater.py  utils.py
